Add functionality for api 'get full profile for authenticated user'
