# src/routes/user.ts
@@ -5,6 +5,7 @@ import {
   updateAvatar,
   getUserSettings,
   putUserSettings,
+  getFullUserProfileForAuth,
 } from "../controllers/user";
 import {
   validateUserEmail,
@@ -15,9 +16,14 @@ import { authorization } from "../middlewares/authorization";
 export const router: Router = express.Router();
 
 // @route   GET '/api/v1/user?email'
-// @desc    get full user profile
+// @desc    get full user profile for anonymous user
 // @access  public
 router.get("/user", validateUserEmail, getFullUserProfile);
+
+// @route   GET '/api/v1/user/profile'
+// @desc    get full user profile for authenticated user
+// @access  private
+router.get("/user/profile", authorization, getFullUserProfileForAuth);
 
 // @route   GET '/api/v1/user/basic-info'
 // @desc    get user name and picture
